Refactoring sonarQube