@@ -96,61 +96,15 @@ public class ImageUploaderService {
                 .toList(); // Creates an unmodifiable list
     }
 
-   public List<String> salvaImmaginiAnnuncioToBlob(List<MultipartFile> files, int annuncioId,int valoreInizialeCounter) {
+    public List<String> salvaImmaginiAnnuncioToBlob(List<MultipartFile> files, int annuncioId,int valoreInizialeCounter) {
        AtomicInteger counter = new AtomicInteger(valoreInizialeCounter);
        return files.stream()
                .map(file -> {
                    String nomePath = "annuncio" + annuncioId + "-" + counter.getAndIncrement();
                    return imageContainerUtil.uploadImage(file, nomePath);
                })
-               .collect(Collectors.toList());
+               .toList();
    }
-
-    public void updateImmagini(List<ImmaginiImmobiliRequest> request, AnnuncioImmobiliare annuncio){
-
-        annuncio.getImmobile().getImmagini().clear();
-        int numeroImmaginiGiaInserite = addImmaginiGiaEsistentiToNuovaListaImmagini(request,annuncio);
-        List<String> urls = salvaImmaginiAnnuncioToBlob(getListaImmaginiFile(request), annuncio.getId(),numeroImmaginiGiaInserite+1);
-        addNuoveImmaginiToNuovaListaImmagini(urls,request,annuncio);
-
-    }
-
-    public int addImmaginiGiaEsistentiToNuovaListaImmagini(List<ImmaginiImmobiliRequest> request, AnnuncioImmobiliare annuncio){
-
-        int countInserimenti = 0;
-
-        for(ImmaginiImmobiliRequest immagine : request ){
-
-            if(immagine.getUrlImmagineEsistente() != null){
-                ImmaginiImmobile immagineGiaEsistente = ImmaginiImmobile.builder()
-                        .immobile(annuncio.getImmobile())
-                        .descrizione(immagine.getDescrizione())
-                        .url(immagine.getUrlImmagineEsistente())
-                        .build();
-
-                annuncio.getImmobile().getImmagini().add(immagineGiaEsistente);
-
-                countInserimenti++;
-            }
-        }
-
-        return countInserimenti;
-    }
-
-    public List<MultipartFile> getListaImmaginiFile(List<ImmaginiImmobiliRequest> request){
-
-        List<MultipartFile> immaginiFile = new ArrayList<>();
-
-        for(ImmaginiImmobiliRequest immagine : request ){
-
-            if(immagine.getFile() != null){
-
-                immaginiFile.add(immagine.getFile());
-            }
-        }
-
-        return immaginiFile;
-    }
 
     public void updateImmaginiAnnuncio(List<ImmaginiImmobiliRequest> immaginiRequest, AnnuncioImmobiliare annuncio){
 
@@ -195,22 +149,4 @@ public class ImageUploaderService {
         return immaginiImmobile;
     }
 
-
-    public void addNuoveImmaginiToNuovaListaImmagini(List<String> urls, List<ImmaginiImmobiliRequest> request,AnnuncioImmobiliare annuncio) {
-
-        int countFile = 0;
-
-        for (ImmaginiImmobiliRequest immaginiImmobiliRequest : request) {
-            if (immaginiImmobiliRequest.getFile() != null) {
-                ImmaginiImmobile immaginiImmobile = ImmaginiImmobile.builder()
-                        .immobile(annuncio.getImmobile())
-                        .descrizione(immaginiImmobiliRequest.getDescrizione())
-                        .url(urls.get(countFile))
-                        .build();
-
-                annuncio.getImmobile().getImmagini().add(immaginiImmobile);
-                countFile++;
-            }
-        }
-    }
 }
